<resources>
    <string name="app_name">iMet</string>
    <string name="people_details">People Details</string>
    <string name="add_people">Add People</string>

    <string name="label_name">Name</string>
    <string name="label_met_at">Met at</string>
    <string name="label_contact">Contact</string>
    <string name="label_email">Email</string>
    <string name="label_facebook">Facebook</string>
    <string name="label_linked_in">LinkedIn</string>

    <string name="people_id">PEOPLE_ID</string>

    <string name="search">Search</string>
    <string name="save">Save</string>
</resources>
