<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_margin"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardBackgroundColor="@color/colorWhite"
    app:cardCornerRadius="@dimen/card_view_radius"
    app:cardElevation="@dimen/card_view_radius">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_padding">

        <ImageView
            android:id="@+id/view_person_icon"
            android:layout_width="@dimen/profile_image_size"
            android:layout_height="@dimen/profile_image_size"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/default_margin"
            app:srcCompat="@drawable/ic_profile_image"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/view_person_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/view_person_icon"
            android:lines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            tools:text="@string/label_name" />

        <TextView
            android:id="@+id/view_where_met_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view_person_name"
            android:layout_toEndOf="@id/view_person_icon"
            android:drawableStart="@drawable/ic_met_at"
            android:gravity="center_vertical"
            android:lines="1"
            tools:text="@string/label_met_at" />

        <Button
            android:id="@+id/contact_button"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view_where_met_text"
            android:layout_toEndOf="@id/view_person_icon"
            android:drawableStart="@drawable/ic_contact"
            android:drawablePadding="@dimen/drawable_padding"
            android:gravity="center_vertical"
            android:lines="1"
            tools:text="@string/label_contact" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>
